CB-27932 - Validate the connectivity and capacity with a canary DB
This commit contains the following:
- before a Single Server to Single Server RDS upgrade, there is a so-called Canary RDS deployment
which is an RDS instance with the exact same characteristics as the upgrade target
  - the purpose is to find out the following errors _before_ deleting the Single RDS instance
     - missing explicit outbound connectivity to 5432
     - Flexible Server capacity issues in certain Azure regions
     - custom Azure policies denying Flexible Server deployment
     - missing permissions from Credential role
- Flexible -> Flexible upgrades are not affected

Testing:
- Test matrix can be found here: https://docs.google.com/spreadsheets/d/1-k_gOq43Vf_7NIo_7Mfc_8ANBrBAlz2Cz6FJwN8BJVE/edit?gid=380684085#gid=380684085